--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^23.0.4",
+    "expo": "^23.0.0",
+    "@expo/vector-icons": "^6.1.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0",
-    "react-native": "0.50.3",
-    "react-native-elements": "^0.19.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
+    "react-native-elements": "^0.18.3",
     "rn-viewpager": "^1.2.9"
   }
 }
