--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^23.0.0",
     "@expo/vector-icons": "^6.1.0",
+    "expo": "^23.0.0",
     "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
     "react-native-elements": "^0.18.3",
+    "react-native-sound": "^0.10.4",
     "rn-viewpager": "^1.2.9"
   }
 }
