Removing expo dependencies

--- a/app.json
+++ b/app.json
@@ -16,5 +16,7 @@
       "backgroundColor": "#014b69",
       "image": "./assets/icons/splash.png"
     }
-  }
+  },
+  "name": "TPP.gr",
+  "displayName": "TPP.gr"
 }
