:boom: eject to react-native app

--- a/app.json
+++ b/app.json
@@ -17,6 +17,6 @@
       "image": "./assets/icons/splash.png"
     }
   },
-  "name": "TPP.gr",
-  "displayName": "TPP.gr"
+  "name": "TPP",
+  "displayName": "TPP"
 }
