--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.9.0",
     "jest-expo": "23.0.0",
     "react-test-renderer": "16.0.0"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
   "jest": {
@@ -20,7 +17,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.1.0",
-    "expo": "^23.0.0",
     "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
@@ -30,8 +26,8 @@
     "rn-viewpager": "^1.2.9"
   },
   "rnpm": {
-      "assets": [
-    "./assets/fonts/"
-      ]
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
