--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+# Configurable location to the keystore and the signing key alias
+
+APP_RELEASE_KEYSTORE=tpp-release.keystore
+APP_RELEASE_KEY_ALIAS=tpp-app
