--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.1.0",
+    "events": "^1.1.1",
     "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-elements": "^0.18.3",
+    "react-native-htmlview": "^0.12.1",
     "react-native-notifications": "^1.2.0",
     "react-native-sound": "git+https://github.com/zmxv/react-native-sound.git",
     "react-native-vector-icons": "4.5.0",
+    "react-native-xml2js": "^1.0.3",
     "rn-viewpager": "^1.2.9"
   },
   "rnpm": {
