--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@expo/vector-icons": "^6.1.0",
     "events": "^1.1.1",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-elements": "^0.18.3",
