feat(back-button): correctly exiting on double back tap

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -165,6 +165,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-exit-app')
     compile project(':react-native-notifications')
     compile project(':react-native-vector-icons')
     compile project(':react-native-sound')
