--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.1.0",
     "events": "^1.1.1",
-    "html-entities": "^1.2.1",
+    "entities": "1.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "react": "16.0.0",
