--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@expo/vector-icons": "^6.1.0",
     "entities": "1.1.1",
     "events": "^1.1.1",
+    "htmlparser2-without-node-native": "3.9.2",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "react": "16.0.0",
